# tuttekiri

./: .gitignore  README.md  index.html
assets/: index-DngHAgLY.css  index-lVnQiJu7.js  kirigami_cpp.wasm  worker-COmNgNFS.js
code/: README.md  index.html  package.json
code/cpp/: CMakeLists.txt  bind.cpp
code/cpp/coloring/: even_valency.cpp  even_valency.h  init.cpp  init.h
code/cpp/geometry/: deployment.cpp  deployment.h  kirigami.cpp  kirigami.h  unit_pattern.cpp  unit_pattern.h
code/cpp/opt/: TVar.h  deployment.cpp  deployment.h  fully_close.h  fully_closed.cpp  opt.cpp  opt.h  prevent_intersections.cpp  prevent_intersections.h
code/cpp/parameterization/: lift.cpp  lift.h  param.cpp  param.h
code/cpp/utils/: Hmesh.cpp  Hmesh.h  conversions.h  utils.cpp  utils.h
code/data/saved_sessions/: bear.json  bear_depolyable.json  cairo_human_face.json  ghost_sun.json  half_hyperboloid.json  half_torus.json  hearts.json  maomao_pattern_circle.json  nuclear.json  panda.json  styled_4.6.12_fullyclosed.json
code/data/unit_patterns/: 3.12.12-star.ukp  3.12.12.ukp  3.12.12;3.4.3.12.ukp  3.12.12;3.4.3.12_fully_closed.ukp  3.3.3.3.6.ukp  3.3.3.4.4;3.3.4.3.4.ukp  3.3.3.4.4;3.3.4.3.4_dual.ukp  3.3.4.3.4.ukp  3.4.4.6;3.6.3.6.ukp  3.4.6.4.ukp  3.4.6.4;3.3.3.4.4_maomao.ukp  3.4.6.4;3.3.4.3.4.ukp  3^6;3.3.4.3.4.ukp  3^6;3.3.6.6.ukp  4.6.12.ukp  4.6.12_fully_closed.ukp  4.8.8.ukp  6.3.6.3.ukp  arrow.ukp  box.ukp  box_star_fully_closed.ukp  cairo.ukp  cario_fully_closed.ukp  hexagon.ukp  squares_and_diagonals.ukp
code/src/: constants.js  controls.js  curve_editor.js  export.js  kirigami_cpp.js  kirigami_cpp_bridge.js  loader.js  main.js  optimization_controls.js  renderer.js  state.js  style.css  utils.js  viewer3d.js  worker.js
